--- a/test/index.html
+++ b/test/index.html
@@ -79,7 +79,7 @@
     <button class="login-button" id="login-button"><h4>Kenon</button>
 </div>
 <div class="scare">
-    <video id="video" src="dshv2.mp4" loop></video>
+    <video id="video" src="VID-20241221-WA0007.mp4" loop></video>
 </div>
 <script type="text/javascript">
     const video = document.getElementById("video");
