--- a/koyeb/index.html
+++ b/koyeb/index.html
@@ -103,12 +103,12 @@
             try {
                 const { data } = await axios(`https://api.github.com/users/${username}`);
                 try {
-                    const repo = await axios(`https://api.github.com/repos/${username}/Izumi-v3`);
+                    const repo = await axios(`https://api.github.com/repos/${username}/Izumi-bpt`);
                 } catch (e) {
                     alert("You haven't forked the repo. Please fork it first, and try again.");
-                    return location.replace('https://github.com/sataniceypz/Izumi-v3/fork');
+                    return location.replace('https://github.com/sataniceypz/Izumi-bot/fork');
                 }
-                location.replace(`https://app.koyeb.com/deploy?name=izumi-v3&type=git&repository=sataniceypz%2FIzumi-v3&branch=main&builder=dockerfile&env%5BAUDIO_DATA%5D=E%CA%8F%E1%B4%98%E1%B4%A2%3BI%E1%B4%A2%E1%B4%9C%E1%B4%8D%C9%AA-%E1%B4%A03%3Bhttps%3A%2F%2Ffiles.catbox.moe%2F2zhtxb.png&env%5BAUTHOR%5D=E%CA%8F%E1%B4%98%E1%B4%A2&env%5BBOT_NAME%5D=I%E1%B4%A2%E1%B4%9C%E1%B4%8D%C9%AA&env%5BCAPTION%5D=I%E1%B4%A2%E1%B4%9C%E1%B4%8D%C9%AA&env%5BKOYEB%5D=true&env%5BKOYEB_API_KEY%5D=your_api_key&env%5BKOYEB_APP_NAME%5D=izumi-md&env%5BMENU_URL%5D=https%3A%2F%2Ffiles.catbox.moe%2F2zhtxb.png&env%5BMODE%5D=private&env%5BOWNER_NAME%5D=Eypz&env%5BPREFIX%5D=.&env%5BPROCESSNAME%5D=Izumi-v3&env%5BSESSION_ID%5D=izumi%7ENQ34AaeQ&env%5BSTICKER_PACKNAME%5D=Izumi%2C%E2%9D%A4%EF%B8%8F&env%5BSUDO%5D=917994489493&ports=8000%3Bhttp%3B%2F`);
+                location.replace(`https://app.koyeb.com/deploy?name=izumi-v3&type=git&repository=sataniceypz%2FIzumi-bot&branch=main&builder=dockerfile&env%5BAUDIO_DATA%5D=E%CA%8F%E1%B4%98%E1%B4%A2%3BI%E1%B4%A2%E1%B4%9C%E1%B4%8D%C9%AA-%E1%B4%A03%3Bhttps%3A%2F%2Ffiles.catbox.moe%2F2zhtxb.png&env%5BAUTHOR%5D=E%CA%8F%E1%B4%98%E1%B4%A2&env%5BBOT_NAME%5D=I%E1%B4%A2%E1%B4%9C%E1%B4%8D%C9%AA&env%5BCAPTION%5D=I%E1%B4%A2%E1%B4%9C%E1%B4%8D%C9%AA&env%5BKOYEB%5D=true&env%5BKOYEB_API_KEY%5D=your_api_key&env%5BKOYEB_APP_NAME%5D=izumi-md&env%5BMENU_URL%5D=https%3A%2F%2Ffiles.catbox.moe%2F2zhtxb.png&env%5BMODE%5D=private&env%5BOWNER_NAME%5D=Eypz&env%5BPREFIX%5D=.&env%5BPROCESSNAME%5D=Izumi-v3&env%5BSESSION_ID%5D=izumi%7ENQ34AaeQ&env%5BSTICKER_PACKNAME%5D=Izumi%2C%E2%9D%A4%EF%B8%8F&env%5BSUDO%5D=917994489493&ports=8000%3Bhttp%3B%2F`);
             } catch (error) {
                 alert("Invalid GitHub username!");
             }
