--- a/render/index.html
+++ b/render/index.html
@@ -59,9 +59,9 @@
     <div class="container">
         <h1>Deployment Instructions</h1>
         <ol>
-            <li>Fork this repo <a class="link-button" href="https://github.com/sataniceypz/izumi-render/fork" target="_blank">Click Here</a></li>
+            <li>Fork this repo <a class="link-button" href="https://github.com/sataniceypz/izumi-bot/fork" target="_blank">Click Here</a></li>
             <li>On Render dashboard, click <strong>New</strong> and choose <strong>Web Service</strong>.</li>
-            <li>Choose <strong>Public Repository</strong>, then paste the forked repository URL.</li>
+            <li>Choose <strong>Public Repository</strong>, then paste this url: https://bitbucket.org/izumi-eypz/izumi-bot </li>
             <li>Add <strong>DATABASE_URL</strong>, <strong>RENDER_API_KEY</strong>, <strong>RENDER_NAME</strong>, <strong>SESSION_ID</strong>, <strong>PORT</strong>, and other required environment variables.</li>
         </ol>
     </div>
